--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -216,9 +216,15 @@ jobs:
         asset_name: actions-runner-linux-arm64-${{ steps.releaseNote.outputs.version }}.tar.gz
         asset_content_type: application/octet-stream
         
-#  pipeline:
-#    needs: release
-#    environment: release
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: 
+  pipeline:
+    if: success()
+    needs: release
+    environment: release
+    runs-on: ubuntu-latest
+    steps:
+      - name: notify slack on success
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":":rocket-intensifies: Release succesfully created for actions-runner ${{ steps.releaseNote.outputs.version }}. Run `.actions release-runner ${{ steps.releaseNote.outputs.version }}` in Slack to kick off the release!"}' $SLACK_WEBHOOK
+        env: 
+          SLACK_WEBHOOK: ${{ secrets.SLACK }}
+        
